fix: History Fees not showing who paid

--- a/apps/web/src/features/gtf/components/HistoryFeesAccordion/styles.module.css
+++ b/apps/web/src/features/gtf/components/HistoryFeesAccordion/styles.module.css
@@ -16,6 +16,11 @@
   width: 100%;
 }
 
+.summaryLeftColumn {
+  display: flex;
+  flex-direction: column;
+}
+
 .summaryLeft {
   display: flex;
   align-items: center;
